ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /api/(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 5000
#           - path: /(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
